# scribe-python-sdk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  scribe.config.example.json  scribe.config.example.yaml
examples/: README.md
examples/browser_relay/: README.md  server.py
examples/browser_relay/static/: app.js  index.html
examples/cli/: README.md
examples/fastapi_app/: README.md  server.py
examples/fastapi_app/static/: app.js  index.html
examples/server_side/: chunked_upload.py  file_upload.py  single_upload.py
src/scribe_sdk/: __init__.py  auth.py  cli.py  client_async.py  client_sync.py  config.py  discovery.py  errors.py  http.py  models.py  results.py  sessions.py
src/scribe_sdk/audio/: __init__.py  capture.py  encode.py  vad.py
src/scribe_sdk/stream/: __init__.py  ws.py
src/scribe_sdk/upload/: __init__.py  chunked.py  single.py
tests/: conftest.py  test_config.py  test_errors.py  test_results.py  test_sessions.py  test_sync_client.py  test_upload.py
