[project]
name = "scribe-python-sdk"
version = "0.1.0"
description = "Python SDK for the MedScribeAlliance Protocol v0.1 (Voice2Rx / eka.care medical scribe) — sessions, chunked & streaming audio upload, and result polling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "eka.care", email = "support@eka.care" }]
keywords = ["scribe", "medical", "voice", "transcription", "medscribealliance", "eka"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core deps are pure-Python so the SDK installs anywhere (servers, lambdas, EMRs).
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anyio>=4.3",
]

[project.optional-dependencies]
# Mic capture + client-side VAD chunking. Pulls native libs (portaudio, onnxruntime).
audio = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "av>=11.0",
]
# For the browser-relay example server.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/eka-care/scribe-python-sdk"
Documentation = "https://github.com/eka-care/scribe-python-sdk#readme"

[project.scripts]
scribe = "scribe_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live backend (deselect with -m 'not integration')",
    "audio: tests that require the [audio] extra (native libs)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
ignore_missing_imports = true
